--- a/index.html
+++ b/index.html
@@ -124,69 +124,12 @@ voluptatum odit et!</p>-->
 </div>
 </section>
 <!-- End Projects Section -->
-<!-- About Section -->
-<!--section id="about">
-<div class="about container">
-<div class="col-left">
-</div>
-<div class="col-right">
-<h1 class="section-title">About <span>me</span></h1>
-<h2>Front End Developer</h2>
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, velit alias eius
-non illum beatae atque repellat ratione qui veritatis repudiandae adipisci maiores. At
-inventore necessitatibus deserunt exercitationem cumque earum omnis ipsum rem
-accusantium quis, quas quia, accusamus provident suscipit magni! Expedita sint ad dolore,
-commodi labore nihil velit earum ducimus nulla quae nostrum fugit aut, deserunt
-reprehenderit libero enim!</p>
-<a href="#" class="cta">Download Resume</a>
-</div>
-</div>
-</section-->
-<!-- End About Section -->
-<!-- Contact Section -->
-<!--section id="contact">
-<div class="contact container">
-<div>
-<h1 class="section-title">Contact <span>info</span></h1>
-</div>
-<div class="contact-items">
-<div class="contact-item">
-<div class="icon">
-<img src="https://img.icons8.com/bubbles/100/000000/phone.png">
-</div>
-<div class="contact-info">
-<h1>Phone</h1>
-<h2>+1 234 123 1234</h2>
-<h2>+1 234 123 1234</h2>
-</div>
-</div>
-<div class="contact-item">
-<div class="icon">
-<img src="https://img.icons8.com/bubbles/100/000000/new-post.png">
-</div>
-<div class="contact-info">
-<h1>Email</h1>
-<h2>info@gmail.com</h2>
-<h2>abcd@gmail.com</h2>
-</div>
-</div>
-<div class="contact-item">
-<div class="icon">
-<img src="https://img.icons8.com/bubbles/100/000000/map-marker.png">
-</div>
-<div class="contact-info">
-<h1>DATAQUERY</h1>
-<h2>Varanasi, Uttar Pradesh, India</h2>
-</div>
-</div>
-</div>
-</div>
-</section-->
+
 <!-- End Contact Section -->
 <!-- Footer -->
 
 <div class="alert">
-  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+  <span class="closebtn" onclick="this.parent Element.style.display='none';">&times;</span> 
   <strong>A PROPOSITO DELLO
 SVILUPPO SOFTWARE</strong> 
 </div>
@@ -197,21 +140,21 @@ SVILUPPO SOFTWARE</strong>
 <div class="brand">
 <h1><span>M</span>oussa <span>S</span>alisou</h1>
 </div>
-<h2>software developer - Developer Freelance</h2>
+<h2>Software Developer - Developer Freelance</h2>
 <h2>Parliamo del votro progetto</h2>
 <div class="social-icon">
 <div class="social-item">
 <a href="https://code.dcoder.tech/profile/tunsport"><img src="https://img.icons8.com/color/48/000000/stackoverflow.png"/></a>
 </div>
 <div class="social-item">
-<a href="#"><img src="https://img.icons8.com/bubbles/50/000000/github.png"/>
+<a href="https://github.com/salisou"><img src="https://img.icons8.com/bubbles/50/000000/github.png"/>
 </a>
 </div>
 <div class="social-item">
-<a href="#"><img src="https://img.icons8.com/bubbles/50/000000/linkedin.png"/></a>
+<a href="https://www.linkedin.com/in/moussa-salisou" target="_blank" data-after="About"><img src="https://img.icons8.com/bubbles/50/000000/linkedin.png"/></a>
 </div>
 <div class="social-item">
-<a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png"></a>
+<a href="https://twitter.com/@salisoumoussa7"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png"></a>
 </div>
 </div>
 <p>Moussa-DataQuery © 2021 .Dev™</p>
