--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <div class="project-item">
 <div class="project-info">
 <h1>Progetto Pizza Mama</h1>
-<h2>HTML, CSS, Dango, Git, Heroku</h2>
+<h2>HTML, CSS, Django, Git, Heroku</h2>
 <a href="https://jrpizzamamadjangodev.herokuapp.com/"><img src="project1.jpg"></a><br>
 </div>
 </div><br>
