--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <li><a href="#services" data-after="Service">Servizi</a></li>
 <li><a href="#projects" data-after="Projects">Progetti</a></li>
 <li><a href="https://www.linkedin.com/in/moussa-salisou" target="_blank" data-after="About">Chi sono</a></li>
-<li><a href="mailto:salisoumoussa1@gmail.com?subject=Contact%20depuis%20mon%20site%web" data-after="Contact">Contatto</a></li>
+<li><a href="mailto:salisoumoussa1@gmail.com?subject=Contact%20depuis%20mon%20site%web" data-after="Contact" target="_blank" data-after="About">Contatto</a></li>
 </ul>
 </div>
 </div>
@@ -85,7 +85,7 @@
 <div class="project-info">
 <h1>Progetto Pizza Mama</h1>
 <h2>HTML, CSS, Django, Git, Heroku</h2>
-<a href="https://jrpizzamamadjangodev.herokuapp.com/"><img src="project1.jpg"></a><br>
+<a href="https://jrpizzamamadjangodev.herokuapp.com/" target="_blank" data-after="About"><img src="project1.jpg"></a><br>
 </div>
 </div><br>
 
@@ -93,7 +93,7 @@
 <div class="project-item">
 <div class="project-info">
 <h1>Progetto MongoBD</h1>
-<h2>mongodb, git</h2><a href="https://github.com/salisou/mgdbpratique-master.git">
+<h2>mongodb, git</h2><a href="https://github.com/salisou/mgdbpratique-master.git" target="_blank" data-after="About">
 <video width="100%" height="100%" autoplay muted>
  <source src="mongodb.webm" type="video/webm"></a>
 </video><br>
@@ -144,17 +144,17 @@ SVILUPPO SOFTWARE</strong>
 <h2>Parliamo del votro progetto</h2>
 <div class="social-icon">
 <div class="social-item">
-<a href="https://code.dcoder.tech/profile/tunsport"><img src="https://img.icons8.com/color/48/000000/stackoverflow.png"/></a>
+<a href="https://code.dcoder.tech/profile/tunsport" target="_blank" data-after="About"><img src="https://img.icons8.com/color/48/000000/stackoverflow.png"/></a>
 </div>
 <div class="social-item">
-<a href="https://github.com/salisou"><img src="https://img.icons8.com/bubbles/50/000000/github.png"/>
+<a href="https://github.com/salisou" target="_blank" data-after="About"><img src="https://img.icons8.com/bubbles/50/000000/github.png"/>
 </a>
 </div>
 <div class="social-item">
 <a href="https://www.linkedin.com/in/moussa-salisou" target="_blank" data-after="About"><img src="https://img.icons8.com/bubbles/50/000000/linkedin.png"/></a>
 </div>
 <div class="social-item">
-<a href="https://twitter.com/@salisoumoussa7"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png"></a>
+<a href="https://twitter.com/@salisoumoussa7" target="_blank" data-after="About"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png"></a>
 </div>
 </div>
 <p>Moussa-DataQuery © 2021 .Dev™</p>
