--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 <section id="hero">
 <div class="hero container">
 <div>
-<h1>Ciao, <span></span></h1>
-<h1>mi chiamo <span></span></h1>
-<h1>Moussa <span></span></h1>
+<h1>Benvenuto, <span></span></h1>
+<h1>nel mondo <span></span></h1>
+<h1>digitale <span></span></h1>
 <a href="#projects" type="button" class="cta">Scopri di più</a>
 </div>
 </div>
