--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 <section id="hero">
 <div class="hero container">
 <div>
-<h1>Benvenuto, <span></span></h1>
-<h1>nel mondo <span></span></h1>
-<h1>digitale <span></span></h1>
+<h1>Dataquery, <span></span></h1>
+<h1>Sotware <span></span></h1>
+<h1>Developer <span></span></h1>
 <a href="#projects" type="button" class="cta">Scopri di più</a>
 </div>
 </div>
@@ -69,6 +69,15 @@
 <img src="th (1).jpeg">
 <img src="heroku.jpeg">
 <img src="dj.jpeg">
+	
+<div class="service-item">
+<img src="c#.JPG">
+<img src="mobile-app-framework-xamarin.JPG">
+	
+	<!--div class="service-item">
+<img src="c#.JPG">
+<img src="mobile-app-framework-xamarin.JPG">
+</div-->
 </div>
 </div>
 </div>
