--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 <img src="dj.jpeg">
 	
 <div class="service-item">
-<img src="c#.JPG">
-<img src="mobile-app-framework-xamarin.JPG">
+<img src="c#.jpg">
+<img src="mobile-app-framework-xamarin.jpg">
 	
 	<!--div class="service-item">
 <img src="c#.JPG">
