--- a/index.html
+++ b/index.html
@@ -53,27 +53,34 @@
 <h2>Back-end e Front-end</h2>
 </div>
 <div class="service-bottom">
+	
 <div class="service-item">
-<img src="sql.png">
-<img src="mongodb.jpeg" style="width: 100%;">
+	<img src="sql.png">
+	<img src="mongodb.jpeg" style="width: 100%;">
 </div>
+	
 <div class="service-item">
-<img src="Delphi.png"><br><img src="c++.jpeg" style="width: 100%">
+	<img src="Delphi.png">
+	<br>
+	<img src="c++.jpeg" style="width: 100%">
 </div>
+	
 <div class="service-item">
-<img src="Python.jpeg">
-<img src="html-css.jpeg">
+	<img src="Python.jpeg">
+	<img src="html-css.jpeg">
+</div>
 
 </div>
+	<div class="service-item">
+	<img src="th (1).jpeg">
+	<img src="heroku.jpeg">
+	<img src="dj.jpeg">
+</div>	
+
 <div class="service-item">
-<img src="th (1).jpeg">
-<img src="heroku.jpeg">
-<img src="dj.jpeg">
-	
-<div class="service-item">
-<img src="c#.jpg">
-<img src="mobile-app-framework-xamarin.jpg">
-	
+	<img src="c#.jpg">
+	<img src="mobile-app-framework-xamarin.jpg">
+</div>	
 	<!--div class="service-item">
 <img src="c#.JPG">
 <img src="mobile-app-framework-xamarin.JPG">
