--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 <section id="hero">
 <div class="hero container">
 <div>
-<h1>Dataquery, <span></span></h1>
-<h1>Sotware <span></span></h1>
-<h1>Developer <span></span></h1>
+<h1>Sviluppo Softwre, Sviluppo Applicazioni mobile IOS e Android<span></span></h1>
+<h1>Scopri tutto con  DataQuery<span></span></h1>
+<h1>Cosa aspetti Fai clic e scopri tuuto<span></span></h1>
 <a href="#projects" type="button" class="cta">Scopri di più</a>
 </div>
 </div>
@@ -144,11 +144,11 @@ voluptatum odit et!</p>-->
 <!-- End Contact Section -->
 <!-- Footer -->
 
-<div class="alert">
+<!--div class="alert">
   <span class="closebtn" onclick="this.parent Element.style.display='none';">&times;</span> 
   <strong>A PROPOSITO DELLO
 SVILUPPO SOFTWARE</strong> 
-</div>
+</div-->
 <!---->
 <section id="footer">
 <div class="footer container">
