--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 <section id="hero">
 <div class="hero container">
 <div>
-<h1>Sviluppo Softwre, Sviluppo Applicazioni mobile IOS e Android<span></span></h1>
-<h1>Scopri tutto con  DataQuery<span></span></h1>
-<h1>Cosa aspetti Fai clic e scopri tuuto<span></span></h1>
+<h2>Sviluppo Softwre, Sviluppo Applicazioni mobile IOS e Android<span></span></h2>
+<h2>Scopri tutto con  DataQuery<span></span></h2>
+<h2>Cosa aspetti Fai clic e scopri tutto<span></span></h2>
 <a href="#projects" type="button" class="cta">Scopri di più</a>
 </div>
 </div>
