--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
 <section id="hero">
 <div class="hero container">
 <div>
-	<br> <br>
-<h1>Sviluppo Softwre, Sviluppo Applicazioni mobile IOS e Android<span></span></h1>
-<h1>Scopri tutto con  DataQuery<span></span></h1>
-<h1>Cosa aspetti Fai clic e scopri tutto<span></span></h1>
+<h1>Sviluppo Software, <span>Sviluppo Applicazioni mobile Android</span></h1>
+<h1>Programmazione Api <span></span></h1>
+<h1>Fai un clic sotto e scopri<span></span></h1>
 <a href="#projects" type="button" class="cta">Scopri di più</a>
 </div>
 </div>
