--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 <section id="hero">
 <div class="hero container">
 <div>
-<h1>Sviluppo Software, <span>Sviluppo Applicazioni mobile Android</span></h1>
-<h1>Programmazione Api <span></span></h1>
+<h1>Sviluppo Software, <span></span></h1>
+<h1>Sviluppo Applicazioni mobile Android<span></span></h1>
 <h1>Fai un clic sotto e scopri<span></span></h1>
 <a href="#projects" type="button" class="cta">Scopri di più</a>
 </div>
@@ -78,7 +78,7 @@
 </div>	
 
 <div class="service-item">
-	<img src="c#.jpg">
+	<!--img src="c#.jpg"-->
 	<img src="mobile-app-framework-xamarin.jpg">
 </div>	
 	<!--div class="service-item">
