--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <div class="hero container">
 <div>
 <h1>Sviluppo Software, <span></span></h1>
+<h1><span></span></h1>
 <h1>Sviluppo Applicazioni mobile Android<span></span></h1>
-<h1>Fai un clic sotto e scopri<span></span></h1>
 <a href="#projects" type="button" class="cta">Scopri di più</a>
 </div>
 </div>
