--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 <section id="hero">
 <div class="hero container">
 <div>
-<h1>Sviluppo Software, <span></span></h1>
-<h1><span></span></h1>
+<h1>DataQuery<span></span></h1>
+<h1>Sviluppo Software<span></span></h1>
 <h1>Sviluppo Applicazioni mobile Android<span></span></h1>
 <a href="#projects" type="button" class="cta">Scopri di più</a>
 </div>
